fix header logo stretch

--- a/css/main.css
+++ b/css/main.css
@@ -125,8 +125,13 @@ p {
 	line-height: 1.4em;
 }
 
+img {
+	width: 100%;
+}
 
-
+figure {
+	margin: 0;
+}
 
 
 .content-wrapper {
@@ -161,9 +166,9 @@ header .logo {
 
 }
 header .logo img{
-	max-width: 100%;
-	max-height: 40px;
 	padding: 2vh 0;
+	max-width: 220px;
+	
 	
 }
 
@@ -322,6 +327,8 @@ input[type=button] {
 .features {
 	display: flex;
 	justify-content: center;
+	background: url('../img/features-outdoors.jpg') center no-repeat #333;
+	background-size: cover;
 	
 }
 
@@ -334,6 +341,8 @@ input[type=button] {
 	flex-flow: column;
 	align-items: center;
 	padding: 5vh 0 6vh 0;
+
+	color: #E2E3ED;
 }
 
 .features-items article {
@@ -506,6 +515,7 @@ address p {
 	header .content-wrapper {
 		flex-flow: row ;	
 	}
+	
 	header .logo {
 		width: 60vw;
 	}
@@ -586,6 +596,8 @@ address p {
 		flex-flow: column;
 		align-items: stretch;
 		justify-content: flex-start;
+		padding: 0 0 50px 0;
+		
 	}
 	
 	.features-items {
@@ -603,7 +615,25 @@ address p {
 		padding: 60px 0 70px 0;
 	}
 	
+	.reviews h3 {
+		margin-top: 0;
+	}
+	
 	.reviews .content-wrapper {
+	}
+	
+	.reviews article {
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: space-between;
+	}
+	
+	.reviews figure {
+		width: 47%;
+	}
+	
+	.review-content {
+		width: 47%;
 	}
 	
 	.mission {
@@ -662,7 +692,6 @@ address p {
 	}
 	
 	header .logo img {
-		max-height: 50px;
 	}
 	
 	header nav ul li {
